--- a/assets/cp.css
+++ b/assets/cp.css
@@ -86,13 +86,13 @@ body {
  */
 
 /* Filters */
-.lesson-filters {
+.lesson-filter-section {
   width: 100%;
   background: #F7F7F7;
   padding: 30px 20px;
   margin: 30px 0;
 }
-.lesson-filters label {
+.lesson-filter-section label {
   display: block;
   margin: 0 0 4px 0;
   font-size: 14px;
@@ -100,8 +100,12 @@ body {
   color: #C2C2C2;
 }
 
-.lesson-filters select {
+.lesson-filter-section select {
   min-width: 250px;
   min-height: 40px;
   font-size: 18px;
+}
+
+.lesson-filter {
+  display: inline-block;
 }
